--- a/coresdk/src/test/Resources/server/index.html
+++ b/coresdk/src/test/Resources/server/index.html
@@ -13,5 +13,6 @@
 <h2>'Client' Side Consumers</h2>
 <a href="/post_person">/post_person</a><br />
 <a href="/get_person">/get_person</a><br />
+<a href="/login">/login</a><br />
 </body>
 </html>
